--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="offer-content">
                         <div class="offer-badge">Offre</div>
                         <h3>Plat Spécial</h3>
-                        <p class="offer-price">$10.00</p>
+                        <p class="offer-price">22 TND</p>
                         <p class="offer-description">Notre spécialité du chef</p>
                         <div class="offer-details">
                             <p class="offer-details-title">Plat du jour:</p>
@@ -118,7 +118,7 @@
                     <div class="offer-content">
                         <div class="offer-badge">Menu</div>
                         <h3>Menu Spécial</h3>
-                        <p class="offer-price">$9.00</p>
+                        <p class="offer-price">25 TND</p>
                         <p class="offer-description">Entrée + Plat + Dessert + Boisson</p>
                         <div class="offer-details">
                             <p class="offer-details-title">Menu complet:</p>
@@ -141,7 +141,7 @@
                     <img src="carte/entré/tartare de betterave.PNG" alt="Tartare de betterave rôtie" class="menu-image">
                     <div class="item-header">
                         <h3>Tartare de betterave rôtie à la tunisienne</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">9 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -153,7 +153,7 @@
                     <img src="carte/entré/salade de poichiche.PNG" alt="Salade de pois chiches" class="menu-image">
                     <div class="item-header">
                         <h3>Salade de pois chiches, tomates cerises et harissa douce</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">8 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -165,7 +165,7 @@
                     <img src="carte/entré/salade de fenouil.PNG" alt="Salade de fenouil" class="menu-image">
                     <div class="item-header">
                         <h3>Salade de fenouil, orange et olives noires</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">9 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -177,7 +177,7 @@
                     <img src="carte/entré/salade tunisienne de quinoa.PNG" alt="Salade tunisienne de quinoa" class="menu-image">
                     <div class="item-header">
                         <h3>Salade tunisienne quinoa et poivrons grillés</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">10 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -189,7 +189,7 @@
                     <img src="carte/entré/soupe legere de lentille.PNG" alt="Soupe légère de lentilles" class="menu-image">
                     <div class="item-header">
                         <h3>Soupe légère de lentilles corail au curcuma et menthe</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">8 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -201,7 +201,7 @@
                     <img src="carte/entré/velouté de carotte.PNG" alt="Velouté de carottes" class="menu-image">
                     <div class="item-header">
                         <h3>Velouté de carottes et fenouil parfumé au cumin et citron confit</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">9 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -213,7 +213,7 @@
                     <img src="carte/entré/chorba tunisienne.PNG" alt="Chorba tunisienne" class="menu-image">
                     <div class="item-header">
                         <h3>Chorba tunisienne allégée aux légumes et poulet effiloché</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">12 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -232,7 +232,7 @@
                     <img src="carte/plats principaux/crevette sauté.PNG" alt="Crevettes sautées" class="menu-image">
                     <div class="item-header">
                         <h3>Crevettes sautées citron-ail, riz "à notre façon"</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">24 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -244,7 +244,7 @@
                     <img src="carte/plats principaux/pavé saumon.PNG" alt="Pavé de saumon" class="menu-image">
                     <div class="item-header">
                         <h3>Pavé de saumon rôti aux épices tunisiennes</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">25 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -256,7 +256,7 @@
                     <img src="carte/plats principaux/gargoulette d'agneau.PNG" alt="Gargoulette d'agneau" class="menu-image">
                     <div class="item-header">
                         <h3>Gargoulette d'agneau diététique à notre façon</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">22 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -268,7 +268,7 @@
                     <img src="carte/plats principaux/cote veau.PNG" alt="Côte de veau" class="menu-image">
                     <div class="item-header">
                         <h3>Côte de veau poêlée minute, champignons & ail confit</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">23 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -280,7 +280,7 @@
                     <img src="carte/plats principaux/brochette de poulet.PNG" alt="Brochette de poulet" class="menu-image">
                     <div class="item-header">
                         <h3>Brochette de poulet grillé ail & citron confit</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">18 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -292,7 +292,7 @@
                     <img src="carte/plats principaux/calamar farci.PNG" alt="Calamar farci" class="menu-image">
                     <div class="item-header">
                         <h3>Calamar farci léger quinoa & petits légumes</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">21 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -304,7 +304,7 @@
                     <img src="carte/plats principaux/supreme de poulet.PNG" alt="Suprême de poulet" class="menu-image">
                     <div class="item-header">
                         <h3>Suprême de poulet farci épinards & fruits secs</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">20 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -316,7 +316,7 @@
                     <img src="carte/plats principaux/filet daurade.PNG" alt="Filet de daurade" class="menu-image">
                     <div class="item-header">
                         <h3>Filet de daurade en feuille de galette de riz</h3>
-                        <span class="price">$10.00</span>
+                        <span class="price">22 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -335,7 +335,7 @@
                     <img src="carte/desserts/sorbet citron menthe.PNG" alt="Sorbet citron-menthe" class="menu-image">
                     <div class="item-header">
                         <h3>Sorbet citron-menthe à la tunisienne</h3>
-                        <span class="price">$5.00</span>
+                        <span class="price">6 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -347,7 +347,7 @@
                     <img src="carte/desserts/yaourt grec aux figues.PNG" alt="Yaourt grec aux figues" class="menu-image">
                     <div class="item-header">
                         <h3>Yaourt grec aux figues rôties et miel léger</h3>
-                        <span class="price">$5.00</span>
+                        <span class="price">7 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -359,7 +359,7 @@
                     <img src="carte/desserts/salade de fruit frais.PNG" alt="Salade de fruits frais" class="menu-image">
                     <div class="item-header">
                         <h3>Salade de fruits frais au sirop de fleur d'oranger</h3>
-                        <span class="price">$5.00</span>
+                        <span class="price">6 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -371,7 +371,7 @@
                     <img src="carte/desserts/mousse legere.PNG" alt="Mousse légère aux dattes" class="menu-image">
                     <div class="item-header">
                         <h3>Mousse légère aux dattes et amandes</h3>
-                        <span class="price">$5.00</span>
+                        <span class="price">8 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -390,7 +390,7 @@
                     <img src="https://images.unsplash.com/photo-1556679343-c7306c1976bc?w=400&h=300&fit=crop" alt="Thé Infusion" class="menu-image">
                     <div class="item-header">
                         <h3>Thé Infusion</h3>
-                        <span class="price">$2.00</span>
+                        <span class="price">3 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -402,7 +402,7 @@
                     <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=400&h=300&fit=crop" alt="Café" class="menu-image">
                     <div class="item-header">
                         <h3>Café</h3>
-                        <span class="price">$2.00</span>
+                        <span class="price">3 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -414,7 +414,7 @@
                     <img src="https://images.unsplash.com/photo-1548839140-29a749e1cf4d?w=400&h=300&fit=crop" alt="Eau Minérale" class="menu-image">
                     <div class="item-header">
                         <h3>Eau Minérale</h3>
-                        <span class="price">$2.00</span>
+                        <span class="price">2 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -426,7 +426,7 @@
                     <img src="https://images.unsplash.com/photo-1499638673689-79a0b5115d87?w=400&h=300&fit=crop" alt="Thé Glacé Maison" class="menu-image">
                     <div class="item-header">
                         <h3>Thé Glacé Maison Sans Sucre</h3>
-                        <span class="price">$2.00</span>
+                        <span class="price">4 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
@@ -435,10 +435,10 @@
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="https://images.unsplash.com/photo-1523677011781-c91d1bbe2f9d?w=400&h=300&fit=crop" alt="Eau Pétillante" class="menu-image">
+                    <img src="carte/eau pétillante.PNG" alt="Eau Pétillante" class="menu-image">
                     <div class="item-header">
                         <h3>Eau Pétillante Citron-Menthe</h3>
-                        <span class="price">$2.00</span>
+                        <span class="price">4 TND</span>
                     </div>
                     <div class="item-line"></div>
                     <div class="ingredients">
